[package]
name = "vault"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false }
paymentToken = { path = "../paymentToken", default-features = false, features = ["ink-as-dependency"] }
dahbog = { path = "..", default-features = false }
perpToken = { path = "../perpToken", default-features = false}
openbrush = { git = "https://github.com/Brushfam/openbrush-contracts", branch = "develop", default-features = false, features = ["psp22", "psp37"]}

[dev-dependencies]
ink_e2e = { version = "5.0.0" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "paymentToken/std",
    "perpToken/std",
    "openbrush/std",
]
ink-as-dependency = []
e2e-tests = []
